<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sexbook</string>
    <string-array name="sexTypes">
        <item>Wet Dream</item>
        <item>Masturbation</item>
        <item>Oral Sex</item>
        <item>Anal Sex</item>
        <item>Vaginal Sex</item>
    </string-array>
    <string name="reportAddNew">Add a new encounter</string>
    <string name="reportQuality0">Undefined</string>
    <string name="reportQualityPleasure">How Pleasant?</string>
    <string name="reportQualityPleasureInfinitive">Pleasure</string>
    <string name="reportQualityPleasure1">Painful</string>
    <string name="reportQualityPleasure2">No pleasure</string>
    <string name="reportQualityPleasure3">A bit pleasant</string>
    <string name="reportQualityPleasure4">Pleasant</string>
    <string name="reportQualityPleasure5">Highly pleasant</string>
    <string name="reportQualityPleasure6">Ultra-pleasant</string>
    <string name="reportQualityEnergy">How Energetic?</string>
    <string name="reportQualityEnergyInfinitive">Energy</string>
    <string name="reportQualityEnergy1">Low energy</string>
    <string name="reportQualityEnergy2">Normal energy</string>
    <string name="reportQualityEnergy3">Highly energetic</string>
    <string name="reportQualityEnergy4">Explosive</string>
    <string name="reportQualityBafflement">How Baffling?</string>
    <string name="reportQualityBafflementInfinitive">Bafflement</string>
    <string name="reportQualityBafflement1">Not baffling</string>
    <string name="reportQualityBafflement2">A bit baffling</string>
    <string name="reportQualityBafflement3">Moderately baffling</string>
    <string name="reportQualityBafflement4">Highly baffling</string>
    <string name="reportQualityEjaculation">How Draining?</string>
    <string name="reportQualityEjaculationInfinitive">Ejaculation</string>
    <string name="reportQualityEjaculation1">Premature ejaculation</string>
    <string name="reportQualityEjaculation2">Normal ejaculation</string>
    <string name="reportQualityEjaculation3">Deep ejaculation</string>
    <string name="reportDeleteSure">Are you sure you want to delete this encounter?</string>
    <string name="crushHint" translatable="false">.....</string>
    <string name="her">her</string>
    <string name="his">his</string>
    <string name="their">their</string>
    <string name="name">Name</string>
    <string name="sum">Sum</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="lastOrgasm">Last Orgasm</string>
    <string name="firstOrgasm">First Orgasm</string>
    <string name="hotness">Hotness</string>
    <string name="identify">Identification</string>
    <string name="identifyKey">Unique Identifier</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string-array name="presence">
        <item>Specify their presence type&#8230;</item>
        <item>@string/fictionalCharacter</item>
        <item>Contactable (in real life)</item>
        <item>Chattable (online)</item>
        <item>Noticeable (no contact)</item>
        <item>Disappeared</item>
        <item>Deceased</item>
    </string-array>
    <string name="fictionalCharacter">Fictional character</string>
    <string-array name="fictionality" translatable="false">
        <item>@string/isFictional</item>
        <item>@string/realPerson</item>
        <item>@string/fictionalCharacter</item>
    </string-array>
    <string name="isFictional">Is a fictional character?</string>
    <string name="realPerson">Real person</string>
    <string-array name="genders">
        <item>Specify their gender&#8230;</item>
        <item>Female</item>
        <item>Male</item>
        <item>Bigender</item>
        <item>Agender</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="isAndrophile">Likes men</string>
    <string name="isGynephile">Likes women</string>
    <string name="isUnsafePerson">Is an unsafe personality?</string>
    <string name="isUnsafePersonDesc">
        People who either you have problems with them or they have problems with you.
    </string>
    <string-array name="unsafeness" translatable="false">
        <item>@string/isUnsafePerson</item>
        <item>@string/safePerson</item>
        <item>@string/unsafePerson</item>
    </string-array>
    <string name="safePerson">Safe personality</string>
    <string name="unsafePerson">Unsafe personality</string>
    <string name="activeCrush">Enabled</string>
    <string name="activeCrushDesc">
        Enabled crushes will be listed in the main page and will be ticked in the `People` page.
    </string>
    <string name="birth">Birthday</string>
    <string name="heightInCM">Height (cm)</string>
    <string name="address">Address</string>
    <string name="instagram">Instagram</string>
    <string name="creator">Creator(s)</string>
    <string name="firstMet">First Met</string>
    <string name="notifyBirth">Notify me in their birthday</string>
    <string name="crushClear">Clear Information: %s</string>
    <string name="crushClearSure">
        Are you sure you want to clear this person\'s information?
        (THIS DOES NOT INCLUDE THE ENCOUNTERS!)
    </string>
    <string-array name="bodySkinColour">
        <item>Skin colour&#8230;</item>
        <item>Black skin</item>
        <item>Brown skin</item>
        <item>Olive skin</item>
        <item>Medium skin</item>
        <item>Fair skin</item>
        <item>Pale skin</item>
    </string-array>
    <string-array name="bodyHairColour">
        <item>Hair colour&#8230;</item>
        <item>Black hair</item>
        <item>Brunette hair</item>
        <item>Blonde hair</item>
        <item>Red hair</item>
        <item>Other hair colour</item>
    </string-array>
    <string-array name="bodyEyeColour">
        <item>Eye colour&#8230;</item>
        <item>Dark brown eyes</item>
        <item>Light brown eyes</item>
        <item>Hazel eyes</item>
        <item>Green eyes</item>
        <item>Blue eyes</item>
        <item>Other eye colour</item>
    </string-array>
    <string-array name="bodyEyeShape">
        <item>Shape of eyes&#8230;</item>
        <item>Round eyes</item>
        <item>Almond eyes</item>
    </string-array>
    <string-array name="bodyFaceShape">
        <item>Face shape&#8230;</item>
        <item>Diamond face</item>
        <item>Heart face</item>
        <item>Rectangular face</item>
        <item>Oval face</item>
        <item>Round face</item>
        <item>Square face</item>
        <item>Triangular face</item>
    </string-array>
    <string-array name="bodyFat">
        <item>How fat&#8230;</item>
        <item>Skinny</item>
        <item>Skinny-fat</item>
        <item>Fat</item>
    </string-array>
    <string-array name="bodyMuscle">
        <item>Muscularity&#8230;</item>
        <item>Not muscular</item>
        <item>A little muscular</item>
        <item>Too muscular</item>
    </string-array>
    <string-array name="bodyBreasts">
        <item>Breast size&#8230;</item>
        <item>Normal breasts</item>
        <item>Prominent breasts</item>
        <item>Large breasts</item>
    </string-array>
    <string-array name="bodyPenis">
        <item>Penis size&#8230;</item>
        <item>Short penis</item>
        <item>Medium penis</item>
        <item>Long penis</item>
    </string-array>
    <string name="crushHue">Preferred colour in diagrams:</string>
    <string name="crushHueReset">Reset to the previous colour</string>
    <string name="crushHueUnset">Clear</string>
    <string name="duplicateCrush">
        Another crush with this identifier already exists; please make sure the identifier is unique.
    </string>
    <string name="minSum">Minimum number of encounters:</string>
    <string name="otherPartners">Other Partners</string>
    <string name="otherPartnersDesc">
        Other sexual partners having sex along with this person in your sexual history.
    </string>
    <string name="identifyMenuItem">Information</string>
    <string name="summary">Summary</string>
    <string name="summaryHelp">
        This section displays all your crushes in a ranking system based on the numbers
        of sexual activities.
    </string>
    <string name="recency">Recency</string>
    <string name="recencyHelp">
        This section lists all your crushes sorted by your latest sexual activities with them.
    </string>
    <string name="adorability">Adorability</string>
    <string name="adorabilityHelp">
        This page creates diagrams based on total numbers of your sexual activities
        per month/year with each one of your crushes.
    </string>
    <string name="orgasms">Orgasms</string>
    <string name="orgasmsTitle">Orgasm Statistics</string>
    <string name="orgasmsHelp">
        This page creates diagrams of your orgasms.
    </string>
    <string name="intervals">Intervals</string>
    <string name="intervalsHelp">
        This page creates diagrams of intervals between your orgasm (in hours).
    </string>
    <string name="taste">Your Taste</string>
    <string name="tasteHelp">
        This complex page creates numerous diagrams in order to determine your sexual tastes
        in various aspects.
    </string>
    <string name="none">None</string>
    <string name="after">&#160;after&#160;</string>
    <plurals name="hour">
        <item quantity="zero">%d hour</item>
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="once">Once</string>
    <string name="twice">Twice</string>
    <string name="thrice">Thrice</string>
    <string name="nTimes" tools:ignore="PluralsCandidate">%d times</string>
    <string name="excStat">Plus %s excluded from statisticisation.</string>
    <string name="unknown">Plus %s from unknown people.</string>
    <string name="nonCrush">Plus %s from those who are not listed as crushes.</string>
    <string name="plusUnsafe">Plus %s from unsafe people.</string>
    <string name="plusDisappeared">Plus %s from disappeared people.</string>
    <string name="chartOptions">Chart options</string>
    <string name="chartCompositional">Compositional</string>
    <string name="chartTimeSeries">Time Series</string>
    <string name="chartGrowth">Cumulative Time Series</string>
    <string name="chartMonthly">Monthly</string>
    <string name="chartYearly">Yearly</string>
    <string name="statistics">Statistics</string>
    <string name="noStat">The sum of your encounters must exceed one month!</string>
    <string name="crushesStat">Crushes\' Statistics</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="expand">Expand</string>
    <string name="sort">Sort</string>
    <string name="asc">Ascending</string>
    <string name="dsc">Descending</string>
    <string name="help">Help</string>
    <string name="momSettings">Settings</string>
    <string name="dataControls">Data Controls</string>
    <string name="dataControlsDesc">
        <b>Sexbook does not connect to the internet</b> for security reasons;
        your data is completely under your own control.\n
        You can export it in the <b>JSON</b> file format and store it somewhere safe.
    </string>
    <string name="dataImport">Import from Json</string>
    <string name="dataExport">Export to Json</string>
    <string name="dataSend">Send Json to</string>
    <string name="dropboxSignIn">Sign in to Dropbox</string>
    <string name="dropboxSync">Sync with Dropbox</string>
    <string name="lcAccurate">Accurate?</string>
    <string name="lcOrgasmed">Orgasmed?</string>
    <string name="randomCrush">Suggest someone randomly&#8230;</string>
    <string name="people">People</string>
    <string name="places">Places</string>
    <string name="estimation">Estimation</string>
</resources>