<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/management">
        <item
            android:id="@+id/momPpl"
            android:icon="@drawable/people"
            android:title="@string/people" />
        <item
            android:id="@+id/momPlc"
            android:icon="@drawable/place"
            android:title="@string/places" />
        <item
            android:id="@+id/momEst"
            android:icon="@drawable/estimation"
            android:title="@string/estimation" />
    </group>

    <group android:id="@+id/statistics">
        <item
            android:id="@+id/momSum"
            android:icon="@drawable/summary"
            android:title="@string/summary"
            android:tooltipText="@string/summaryHelp" />
        <item
            android:id="@+id/momRec"
            android:icon="@drawable/recency"
            android:title="@string/recency"
            android:tooltipText="@string/recencyHelp" />
        <item
            android:id="@+id/momAdr"
            android:icon="@drawable/adorability"
            android:title="@string/adorability"
            android:tooltipText="@string/adorabilityHelp" />
        <item
            android:id="@+id/momOrg"
            android:icon="@drawable/mixture"
            android:title="@string/orgasms"
            android:tooltipText="@string/orgasmsHelp" />
        <item
            android:id="@+id/momInt"
            android:icon="@drawable/intervals"
            android:title="@string/intervals"
            android:tooltipText="@string/intervalsHelp" />
        <item
            android:id="@+id/momTst"
            android:icon="@drawable/taste"
            android:title="@string/taste"
            android:tooltipText="@string/tasteHelp" />
    </group>

    <group android:id="@+id/control">
        <item
            android:id="@+id/momDataControls"
            android:icon="@drawable/data_controls"
            android:title="@string/dataControls" />
        <item
            android:id="@+id/momSettings"
            android:icon="@drawable/settings"
            android:title="@string/momSettings" />
        <item
            android:id="@+id/momHelp"
            android:icon="@drawable/help"
            android:title="@string/help" />
    </group>
</menu>