<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/sortBy"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sortByName"
            android:title="@string/name" />
        <item
            android:id="@+id/sortByScore"
            android:title="@string/score" />
        <item
            android:id="@+id/sortByAge"
            android:title="@string/age" />
        <item
            android:id="@+id/sortByHeight"
            android:title="@string/height" />
    </group>

    <group
        android:id="@+id/sortOrder"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sortAsc"
            android:title="@string/asc" />
        <item
            android:id="@+id/sortDsc"
            android:title="@string/dsc" />
    </group>
</menu>