<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:theme="@style/Theme.Sexbook.Dialogue.Layout"
    tools:ignore="UseCompatTextViewDrawableXml">

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normal"
        android:lineSpacingMultiplier="1.3"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/dataControlsDesc"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dataExport"
        style="@style/dataControlsItem"
        android:drawableStart="@drawable/json_export"
        android:text="@string/dataExport" />

    <TextView
        android:id="@+id/dataImport"
        style="@style/dataControlsItem"
        android:drawableStart="@drawable/json_import"
        android:text="@string/dataImport" />

    <TextView
        android:id="@+id/dataSend"
        style="@style/dataControlsItem"
        android:drawableStart="@drawable/json_send"
        android:text="@string/dataSend" />

    <TextView
        android:id="@+id/dropboxSync"
        style="@style/dataControlsItem"
        android:drawableStart="@drawable/dropbox"
        android:text="@string/dropboxSync" />

    <TextView
        android:id="@+id/dropboxLogin"
        style="@style/dataControlsItem"
        android:drawableStart="@drawable/dropbox"
        android:text="@string/dropboxSignIn" />
</LinearLayout>