<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:theme="@style/Theme.Sexbook.Dialogue.Layout">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ir.mahdiparastesh.sexbook.more.SoftEditText
            android:id="@+id/fName"
            style="@style/identifyET"
            android:autofillHints="personGivenName"
            android:hint="@string/firstName"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <View style="@style/identifySep" />

        <ir.mahdiparastesh.sexbook.more.SoftEditText
            android:id="@+id/mName"
            style="@style/identifyET"
            android:autofillHints="personMiddleName"
            android:hint="@string/middleName"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <View style="@style/identifySep" />

        <ir.mahdiparastesh.sexbook.more.SoftEditText
            android:id="@+id/lName"
            style="@style/identifyET"
            android:autofillHints="personFamilyName"
            android:hint="@string/lastName"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <View style="@style/identifySep" />

        <LinearLayout
            style="@style/identifyField"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feminine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminine"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:fontFamily="@font/normal" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/masc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.Sexbook.Switch.Dialogue" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/masculine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculine"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:fontFamily="@font/normal" />
        </LinearLayout>

        <View style="@style/identifySep" />

        <ir.mahdiparastesh.sexbook.more.SoftEditText
            android:id="@+id/height"
            style="@style/identifyET"
            android:hint="@string/heightInCM"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:maxLines="1" />

        <View style="@style/identifySep" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/birth"
            style="@style/identifyButton"
            android:text="@string/birth" />

        <View style="@style/identifySep" />

        <ir.mahdiparastesh.sexbook.more.SoftEditText
            android:id="@+id/location"
            style="@style/identifyET"
            android:autofillHints="addressLocality"
            android:hint="@string/location"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="5" />

        <View style="@style/identifySep" />

        <ir.mahdiparastesh.sexbook.more.SoftEditText
            android:id="@+id/instagram"
            style="@style/identifyET"
            android:autofillHints="username"
            android:hint="@string/instagram"
            android:inputType="textUri|textMultiLine"
            android:maxLength="30"
            android:maxLines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="serif-monospace" />

        <View style="@style/identifySep" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notifyBirth"
            style="@style/identifyField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/notifyBirth"
            android:theme="@style/Theme.Sexbook.Switch.Dialogue" />
    </LinearLayout>
</ScrollView>